bk_ida/gccida/g3/subreg_regno_offset
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/subreg_regno_offset/src/rtlanal.c:3484:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode xmode, 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/subreg_regno_offset/src/rtlanal.c:3486:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode ymode) 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/subreg_regno_offset/src/rtlanal.c:3507:40: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v8 = ( ( unsigned int)( *( ( _DWORD *)&mode_class_0 + ( int)v4) - 5) < 2) + 1; 
                                       ^~~~~~~~~~~~
                                       mode_class
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/subreg_regno_offset/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/subreg_regno_offset/src/rtlanal.c:3562:38: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
if ( ( unsigned int)( *( ( _DWORD *)&mode_class_0 + ( int)v4) - 5) <= 1 ) 
                                     ^~~~~~~~~~~~
                                     mode_class
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/subreg_regno_offset/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/subreg_regno_offset/src/rtlanal.c:3569:38: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
if ( ( unsigned int)( *( ( _DWORD *)&mode_class_0 + v13) - 5) > 1 ) 
                                     ^~~~~~~~~~~~
                                     mode_class
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/subreg_regno_offset/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/subreg_regno_offset/src/rtlanal.c:3578:38: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
if ( ( unsigned int)( *( ( _DWORD *)&mode_class_0 + ( int)v4) - 5) <= 1 ) 
                                     ^~~~~~~~~~~~
                                     mode_class
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/subreg_regno_offset/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/subreg_regno_offset/src/rtlanal.c:3583:38: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
if ( ( unsigned int)( *( ( _DWORD *)&mode_class_0 + ( int)ymode) - 5) > 1 ) 
                                     ^~~~~~~~~~~~
                                     mode_class
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/subreg_regno_offset/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
7 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/subreg_regno_offset/src/obj/rtlanal.o] Error 1
